# bge-faiss-mcp

./: .env.example  LICENSE  PROJECT.md  README.md  README_GPU.md  install_gpu.py  pyproject.toml  pytest.ini  test_actual_gpu.py  test_gpu.py  test_torch_version.py  test_uvx_gpu.py  test_uvx_gpu_final.py  test_v107_gpu.py
.github/workflows/: test.yml
docs/: gpu-setup.md  technical-spec.md  uvx-installation.md
src/bge_faiss_mcp/: __init__.py  server.py
src/bge_faiss_mcp/core/: __init__.py  embedder.py  manager.py  rag.py  retriever.py  vector_store.py
src/bge_faiss_mcp/utils/: __init__.py  analyzer.py  gpu.py  parser.py
tests/: __init__.py  test_embedder.py  test_gpu_functionality.py  test_gpu_integration.py  test_gpu_simple.py  test_manager.py  test_server.py  test_vector_store.py
